Configured for MongoDB database, Added Flask cli commands for scraping and initdb, Added API endpoints.

--- a/requirements-to-freeze.txt
+++ b/requirements-to-freeze.txt
@@ -1,8 +1,15 @@
 Flask
-Flask-SQLAlchemy
-SQLAlchemy
 requests
 beautifulsoup4
 Werkzeug
 Flask-Mail
 Flask_Uploads
+pymongo
+pika
+celery
+redis
+python-dateutil
+pytz
+uwsgi
+jsonschema
+pandas
